Fix properties overflow

--- a/app/assets/stylesheets/composer/_newstime_palette_view.css.scss
+++ b/app/assets/stylesheets/composer/_newstime_palette_view.css.scss
@@ -56,6 +56,7 @@
     right: 0;
     left: 0;
     padding: 7px;
+    overflow-y: scroll;
     &::-webkit-scrollbar {
       width: 5px;
     }
